syntax = "proto3";

package fixbug; //声明了代码所在的包(对于C++来说就是namespace)

message ResultCode
{
    int32 errcode = 1;
    bytes errmsg = 2;
}
//登录请求消息类型
message LoginRequest
{
    bytes name = 1;    //表示第一个字段
    bytes pwd = 2;
}

//定义登录响应消息类型
message LoginResponse
{
    ResultCode result = 1;
    bool success = 3;
}

message GetFriendListRequest
{
    uint32 userid = 1;
    
}

message User
{
    bytes name = 1;
    uint32 age = 2;
    enum Sex 
    {
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}

message GetFriendListResponse
{
    ResultCode result = 1;
    repeated  User friend_list = 2;
}